--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #dde7ff;  
+  background: -webkit-linear-gradient(to right, #e5faf8, #dde7ff);  
+  background: linear-gradient(to right, #e5faf8, #dde7ff); 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.text-overflow{
+  width:90%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
+.game-result {
+  font-size: 8em; 
+  width: 200px;
+  margin: 10px auto;
+  background: #000;
+  color: #fff;
+  border-radius: 100px;
+  border: solid 15px #1c6022;
+  line-height: 165px;
+  height: 200px;
+}
+.img-center { margin: 10px auto; }
